--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,12 @@
     "configurations": [
         {
             "name": "Launch Package",
-            "buildFlags": ["-buildvcs=false"],
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}"
+            "program": "${workspaceFolder}",
+            "args": ["-buildvcs=false"],
+            "console": "integratedTerminal"
         }
     ]
 }
